# rust_template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: func.rs  lib.rs  proto.rs
